<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvPcno"
        android:layout_width="91dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/textview"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="117dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toEndOf="@+id/tvStatus"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="257dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/textview2"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tvLabno1"
        app:layout_constraintTop_toBottomOf="@+id/tvStatus" />

    <TextView
        android:id="@+id/tvLabno1"
        android:layout_width="97dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/textview3"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPcno" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="113dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/textview4"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tvPcno"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>