<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvFullname"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:text="@string/tvFullname"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvLabno1"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="68dp"
        android:text="@string/textviewLabNo"
        app:layout_constraintStart_toEndOf="@+id/tvDept"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPost"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="68dp"
        android:text="@string/textviewPost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvLabno1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDept"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/textviewDept"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFullname" />



</androidx.constraintlayout.widget.ConstraintLayout>